Fixed readme text alignement

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -34,6 +34,10 @@ h3 {
     color: black;
 }
 
+.panel-body {
+    text-align: left;
+}
+
 @media (min-width: 768px) and (max-width: 991px) {
     .container {
         width: 768px;
